# weather-data-producer-consumer

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
results/: weather.csv
src/: __init__.py  logger.py  mqtt.py  weather.py  weather_consumer_main.py  weather_producer_main.py
